--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">MetarApp</string>
+    <string name="label_station">STATION</string>
+    <string name="hint_icao_code">ICAO Code</string>
+    <string name="btn_label_get_metar">GET METAR</string>
+    <string name="txt_welcome_message">Welcome \nto\nMETAR Browser</string>
+    <string name="btn_label_search_code">Search by ICAO Code</string>
+    <string name="btn_labelsearch_from_list">Search from German station list</string>
+    <string name="txt_no_internet_connectivity">No internet connectivity, \nCheck you internet connection \n Try Again !!!</string>
+    <string name="txt_airport_not_found">Airport not found, Please check ICAO code entered</string>
+    <string name="txt_last_available_update">Last available update</string>
+    <string name="label_raw_data">Raw Data</string>
+    <string name="content">Content</string>
+    <string name="label_decoded_data">Decoded Data</string>
+    <string name="txt_available_list">List of available German ICAO Station Code</string>
 </resources>
