--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,14 @@
     <string name="btn_label_get_metar">GET METAR</string>
     <string name="txt_welcome_message">Welcome \nto\nMETAR Browser</string>
     <string name="btn_label_search_code">Search by ICAO Code</string>
-    <string name="btn_labelsearch_from_list">Search from German station list</string>
-    <string name="txt_no_internet_connectivity">No internet connectivity, \nCheck you internet connection \n Try Again !!!</string>
+    <string name="btn_label_search_from_list">Search from Filtered List</string>
+    <string name="txt_no_internet_connectivity">Connectivity Status Offline</string>
     <string name="txt_airport_not_found">Airport not found, Please check ICAO code entered</string>
     <string name="txt_last_available_update">Last available update</string>
     <string name="label_raw_data">Raw Data</string>
     <string name="content">Content</string>
     <string name="label_decoded_data">Decoded Data</string>
     <string name="txt_available_list">List of available German ICAO Station Code</string>
+    <string name="label_metar_browser">Metar Browser</string>
+    <string name="label_select_station">Select Station</string>
 </resources>
